fixed command text wrapping

--- a/src/components/Output/styles.module.scss
+++ b/src/components/Output/styles.module.scss
@@ -4,6 +4,8 @@
 
     pre {
         padding: 10px 20px;
+        word-wrap: break-word;
+        white-space: break-spaces;
 
         span {
             user-select: none;
